refactor: Removed sign_transaction_if_paid, and now sign_transaction and sign_and_send_transaction will always validate price, but if the node operator sets price as FREE it will have the same behavior as the old methods
