# crates/lib/src/rpc_server/method/mod.rs
@@ -5,5 +5,4 @@ pub mod get_payer_signer;
 pub mod get_supported_tokens;
 pub mod sign_and_send_transaction;
 pub mod sign_transaction;
-pub mod sign_transaction_if_paid;
 pub mod transfer_transaction;
